--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      PATH: "$HOME/.cargo/bin"
+      PATH: "$HOME/.cargo/bin:$PATH"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
