--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      PATH: "$HOME/.cargo/bin:$PATH"
+      testenv: "abc123"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -32,6 +32,7 @@ jobs:
       - name: display env
         run:
           env
+        run: 
 
       - name: find .env
         run: |
