--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,6 +42,15 @@ jobs:
           echo "PATH="$HOME/.cargo/bin:$PATH"" >> $GITHUB_ENV
           cat $GITHUB_ENV
 
+      - name: dir 
+        run: mkdir -p 1/2/3/4/5
+
+      - run: cd 1/2 ; ls -la
+
+      - run: pwd
+
+
+
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
       #  run: |
