--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,12 +43,15 @@ jobs:
           cat $GITHUB_ENV
 
 
-      - run: mkdir -p 1/2/3/4/5
+      - run: mkdir -p 1/2/3/4/5/6
 
       - run: cd 1/2/3/4/5 ; pwd
 
       - run: pwd ; ls -la
 
+      - name: test working-directory
+        working-directory: 1/2/3/4
+        run: pwd ; ls -la
 
 
       # Runs a set of commands using the runners shell
