--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,7 +52,10 @@ jobs:
       - name: test working-directory
         working-directory: 1/2/3/4
         run: pwd ; ls -la
-
+      - name: chronyd
+        run: |
+        sudo apt list | grep -i chrony
+        sudo find /etc/ -type f | grep -i chrony
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
