--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,7 +55,10 @@ jobs:
       - name: chronyd
         run: |
           sudo apt list | grep -i chrony
-          sudo find /etc/ -type f | grep -i chrony
+          #sudo find /etc/ -type f | grep -i chrony
+          echo
+          cat /etc/chrony/chrony.conf
+          echo
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
