--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,6 +59,7 @@ jobs:
           echo
           cat /etc/chrony/chrony.conf
           echo
+          sudo systemctl status -l chrony
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
