--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -61,18 +61,15 @@ jobs:
           echo
           sudo systemctl status -l chrony
           sudo systemctl stop chrony
-          sudo systemctl status -l chrony || true
-          echo 0
           sudo sed 's|^refclock.*|#&|g' -i /etc/chrony/chrony.conf
-          echo 1
           sudo sed '1i \server time.cloudflare.com iburst minpoll 4 maxpoll 5 nts' -i /etc/chrony/chrony.conf
-          echo 2
           sudo sed '2i \server time.google.com iburst minpoll 4 maxpoll 5' -i /etc/chrony/chrony.conf
-          echo 3
           sudo sed '3i \server time.apple.com iburst minpoll 4 maxpoll 5' -i /etc/chrony/chrony.conf
           cat /etc/chrony/chrony.conf
           sudo systemctl start chrony
-          sleep 10 ; sudo systemctl status -l chrony
+          sleep 5; sudo chronyc sources; sudo chronyc makestep
+          sudo systemctl status -l chrony
+          
 
 
       # Runs a set of commands using the runners shell
