--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: test
 
 # Controls when the workflow will run
 on:
@@ -26,7 +26,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
       # default dir
       - run: /bin/ls -la ./; pwd
@@ -69,8 +69,10 @@ jobs:
           sudo systemctl start chrony
           sleep 10; sudo chronyc sources; sleep 2; chronyc tracking; sudo chronyc makestep
           sudo systemctl status -l chrony
-          
 
+      - name: list packages
+        run: sudo dpkg -l | grep -iE 'docker|container|podman|runc|crun|moby'
+      
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
