--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,6 +74,9 @@ jobs:
         run: |
           sudo dpkg -l | grep -iE 'docker|container|podman|runc|crun|moby'
           sudo dpkg -l | grep -iE 'google|chrome|firefox|libmono|microsoft|mysql|postgresql'
+
+      - name: purge
+        run: sudo apt autoremove --purge -y '^docker.*' '^container.*' crun runc '^podman.*' firefox google-chrome-stable '^libmono-.*' '^mysql-.*' '^postgresql-.*' '^php.*'
       
 
       # Runs a set of commands using the runners shell
