--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,11 +73,14 @@ jobs:
       - name: list packages
         run: |
           sudo dpkg -l | grep -iE 'docker|container|podman|runc|crun|moby'
-          sudo dpkg -l | grep -iE 'google|chrome|firefox|libmono|microsoft|mysql|postgresql'
+          sudo dpkg -l | grep -iE 'google|chrome|firefox|libmono|microsoft|mysql|postgresql|snap'
+
+      - run: df -h
 
       - name: purge
-        run: sudo apt autoremove --purge -y '^docker.*' '^container.*' crun runc '^podman.*' firefox google-chrome-stable '^libmono-.*' '^mysql-.*' '^postgresql-.*' '^php.*'
+        run: sudo apt autoremove --purge -y '^docker.*' '^container.*' crun runc '^podman.*' firefox google-chrome-stable '^libmono-.*' '^mono-.*' '^mysql-.*' '^postgresql-.*' '^php.*'
       
+      - run: df -h
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
