--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,6 +81,7 @@ jobs:
         run: sudo apt autoremove --purge -y '^docker.*' '^container.*' crun runc '^podman.*' firefox google-chrome-stable '^libmono-.*' '^mono-.*' '^mysql-.*' '^postgresql-.*' '^php.*'
       
       - run: df -h
+      - run: du -h --max-depth=1 / | sort -h
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
