--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,7 @@ jobs:
         run: sudo apt autoremove --purge -y '^docker.*' '^container.*' crun runc '^podman.*' firefox google-chrome-stable '^libmono-.*' '^mono-.*' '^mysql-.*' '^postgresql-.*' '^php.*'
       
       - run: sudo df -h
-      #- run: sudo du -h --max-depth=1 --exclude={/proc,/sys,/dev,/run} / | sort -h
+      - run: sudo du -h --max-depth=1 --exclude={/proc,/sys,/dev,/run} / | sort -h
       - run: sudo du -h --max-depth=1 /usr | sort -h
       - run: sudo du -h --max-depth=1 /usr/local | sort -h
       - run: sudo du -h --max-depth=1 /usr/lib | sort -h
