--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -86,6 +86,7 @@ jobs:
       - run: sudo du -h --max-depth=1 /usr | sort -h
       - run: sudo du -h --max-depth=1 /usr/local | sort -h
       - run: sudo du -h --max-depth=1 /usr/lib | sort -h
+      - run: sudo systemctl list-unit-files
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
