--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,6 +43,9 @@ jobs:
           cat $GITHUB_ENV
 
       - run: |
+          sudo apt update -y -qqq
+          sudo apt autoremove --purge -y needrestart || : 
+          
           sudo apt autoremove --purge -y --allow-remove-essential $(dpkg -l | grep -i -E 'firefox|firebird|google-chrome-stable' | awk '{print $2}' | sort -V | uniq | paste -sd" ")
       - run: mkdir -p 1/2/3/4/5/6
 
@@ -82,7 +85,7 @@ jobs:
         run: sudo apt autoremove --purge -y '^docker.*' '^container.*' crun runc '^podman.*' firefox google-chrome-stable '^libmono-.*' '^mono-.*' '^mysql-.*' '^postgresql-.*' '^php.*'
       
       - run: sudo df -h
-      # - run: sudo du -h --max-depth=1 --exclude={/proc,/sys,/dev,/run} / | sort -h
+        # - run: sudo du -h --max-depth=1 --exclude={/proc,/sys,/dev,/run} / | sort -h
       - run: sudo du -h --max-depth=1 /usr | sort -h
       - run: sudo du -h --max-depth=1 /usr/local | sort -h
       - run: sudo du -h --max-depth=1 /usr/lib | sort -h
