--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
       - run: |
           sudo apt update -y -qqq
           sudo apt autoremove --purge -y needrestart || : 
-          
+          sudo apt autoremove --purge -y '^php.*'
           sudo apt autoremove --purge -y --allow-remove-essential $(dpkg -l | grep -i -E 'firefox|firebird|google-chrome-stable' | awk '{print $2}' | sort -V | uniq | paste -sd" ")
       - run: mkdir -p 1/2/3/4/5/6
 
