--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,6 +81,9 @@ jobs:
         run: |
           sudo dpkg -l | grep -iE 'docker|container|podman|runc|crun|moby'
           sudo dpkg -l | grep -iE 'google|chrome|firefox|libmono|microsoft|mysql|postgresql|snap'
+          sudo dpkg -l | grep -iE 'node'
+          sudo which node
+          sudo which npm
 
       - run: sudo df -h
 
