--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -79,9 +79,7 @@ jobs:
 
       - name: list packages
         run: |
-          sudo dpkg -l | grep -iE 'docker|container|podman|runc|crun|moby'
-          sudo dpkg -l | grep -iE 'google|chrome|firefox|libmono|microsoft|mysql|postgresql|snap'
-          sudo dpkg -l | grep -iE 'node'
+          sudo dpkg -l | grep -i 'node'
           sudo which node
           sudo which npm
 
