--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,12 +44,11 @@ jobs:
 
       - run: |
           sudo apt update -y -qqq
-          sudo apt autoremove --purge -y needrestart || : 
-          #sudo systemctl status -l postgresql.service
-          #sudo systemctl status -l mysql
-          #sudo systemctl status -l mysqld
-          #sudo apt autoremove --purge -y '^php.*'
-          #sudo apt autoremove --purge -y --allow-remove-essential $(dpkg -l | grep -i -E 'firefox|firebird|google-chrome-stable' | awk '{print $2}' | sort -V | uniq | paste -sd" ")
+          sudo apt autoremove --purge -y needrestart || true
+          sudo apt install -y bash wget curl openssl
+          sudo ln -svf bash /bin/sh
+          sudo wget https://raw.githubusercontent.com/icebluey/docker/refs/heads/master/scripts/clean-os.sh -O /tmp/clean-os.sh
+          sudo bash /tmp/clean-os.sh
       - run: mkdir -p 1/2/3/4/5/6
 
       - run: cd 1/2/3/4/5 ; pwd
@@ -80,13 +79,10 @@ jobs:
       - name: list packages
         run: |
           sudo dpkg -l | grep -i 'node'
-          sudo which node
-          sudo which npm
 
       - run: sudo df -h
 
-      - name: purge
-        run: sudo apt autoremove --purge -y '^docker.*' '^container.*' crun runc '^podman.*' firefox google-chrome-stable '^libmono-.*' '^mono-.*' '^mysql-.*' '^postgresql-.*' '^php.*'
+
       
       - run: sudo df -h
         # - run: sudo du -h --max-depth=1 --exclude={/proc,/sys,/dev,/run} / | sort -h
@@ -94,9 +90,3 @@ jobs:
       - run: sudo du -h --max-depth=1 /usr/local | sort -h
       - run: sudo du -h --max-depth=1 /usr/lib | sort -h
       - run: sudo systemctl list-unit-files
-
-      # Runs a set of commands using the runners shell
-      #- name: Run a multi-line script
-      #  run: |
-      #    echo Add other actions to build,
-      #    echo test, and deploy your project.
