--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,7 @@ jobs:
           sudo du -sh /opt/hostedtoolcache/
           sudo dpkg -S /usr/local/bin/node || true
           sudo /usr/local/bin/node -p process.versions
+          sudo /bin/ls -lah /opt/hostedtoolcache/
       - run: mkdir -p 1/2/3/4/5/6
 
       - run: cd 1/2/3/4/5 ; pwd
