--- a/.github/workflows/arm64-linux.yml
+++ b/.github/workflows/arm64-linux.yml
@@ -60,11 +60,11 @@ jobs:
           pwd ; ls -la
 
       - run: |
-          apt update -y
-          apt install -y wget curl openssl bash
-          apt install -y apt install -y make gcc g++ m4 pkg-config perl libperl-dev groff-base dpkg-dev cmake
-          apt install -y autoconf autoconf-archive autogen automake autopoint autotools-dev libtool m4 bison flex
-          apt install -y llvm-dev libclang-dev
+          sudo apt update -y
+          sudo apt install -y wget curl openssl bash
+          sudo apt install -y apt install -y make gcc g++ m4 pkg-config perl libperl-dev groff-base dpkg-dev cmake
+          sudo apt install -y autoconf autoconf-archive autogen automake autopoint autotools-dev libtool m4 bison flex
+          sudo apt install -y llvm-dev libclang-dev
 
       #- run: sudo df -h
       # - run: sudo du -h --max-depth=1 --exclude={/proc,/sys,/dev,/run} / | sort -h
