--- a/.github/workflows/arm64-linux.yml
+++ b/.github/workflows/arm64-linux.yml
@@ -67,6 +67,7 @@ jobs:
           sudo apt install -y llvm-dev libclang-dev
           sudo git clone https://github.com/mcmilk/7-Zip-zstd.git
           cd 7-Zip-zstd/CPP/ && sudo CC="clang" CXX="clang++" OUTDIR="$PWD/build-clang" ./build-lx.sh
+          cd _o/ && pwd && sudo /bin/ls -lah
 
       #- run: sudo df -h
       # - run: sudo du -h --max-depth=1 --exclude={/proc,/sys,/dev,/run} / | sort -h
