--- a/.github/workflows/arm64-linux.yml
+++ b/.github/workflows/arm64-linux.yml
@@ -70,6 +70,14 @@ jobs:
           sudo ls -lah
           #cd _o/ && pwd && sudo /bin/ls -lah
 
+      - name: build
+        run: |
+          sudo git clone https://github.com/mcmilk/7-Zip-zstd.git
+          cd 7-Zip-zstd/CPP/ && sudo CC="clang" CXX="clang++" OUTDIR="$PWD/build-clang" ./build-lx.sh
+          sudo ls -lah
+          cd build-clang/ && sudo /bin/ls -lah && pwd
+          cd _o/ && pwd && sudo /bin/ls -lah
+
       #- run: sudo df -h
       # - run: sudo du -h --max-depth=1 --exclude={/proc,/sys,/dev,/run} / | sort -h
       #- run: sudo du -h --max-depth=1 /usr | sort -h
